# OCPP_16

./: CMakeLists.txt  README.md  configuration.c  ftp_ota.c  ftp_ota.h  i2c_com.c  idf_component.yml  main.c  ocpp.c  ocpp.h  ocpp_com.c  ota_nuvoton.c  smart_charging.c  utils.c  utils.h
